# cosmo-python

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: docs.yml  test.yml
src/cosmo/: __init__.py  bundle.py  cosmo.py  errors.py
tests/: test_cosmo.py
